--- a/09-classy-weather/starter/index.html
+++ b/09-classy-weather/starter/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/cloudy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🌤️ Classy Weather</title>
+    <title>Classy Weather</title>
   </head>
-  <body>
+  <body class="bg-red-200">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
