--- a/09-classy-weather/starter/index.html
+++ b/09-classy-weather/starter/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Classy Weather</title>
   </head>
-  <body class="bg-red-200">
-    <div id="root"></div>
+  <body>
+    <div
+      id="root"
+      class="bg-red-200 h-screen flex justify-center items-center"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
